@@ -1,5 +1,11 @@
 2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03495] local CGI can't work
+	* local.c: #include "hash.h"
+		(set_environ): env string put in hash
+
+2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03494] Number of line is few when pager mode.
 	* display.c (redrawLine): buf->rootY
 
